- added HeroicDrugaCelin version

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <script src="spine-player.js"></script>
   <script>
     new spine.SpinePlayer("player-container", {
-      jsonUrl: "spineboy-pro.json",
-      atlasUrl: "spineboy-pro.atlas",
+      jsonUrl: "HeroicDrugaCelin.json",
+      atlasUrl: "HeroicDrugaCelin.atlas",
       animation: "idle",
       alpha: true,
       backgroundColor: "#222222",
