--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     new spine.SpinePlayer("player-container", {
       jsonUrl: "HeroicDrugaCelin.json",
       atlasUrl: "HeroicDrugaCelin.atlas",
-      animation: "idle",
+      animation: "animation",
       alpha: true,
       backgroundColor: "#222222",
       showControls: true,
