--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       alpha: true,
       backgroundColor: "#222222",
       showControls: true,
+      premultipliedAlpha: false,
       controlBones: ["Frame"],
       success: function (player) {
         console.log("Spine animation loaded!");
