--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   <script src="spine-player.js"></script>
   <script>
     new spine.SpinePlayer("player-container", {
-      jsonUrl: "ultraWin.json",
-      atlasUrl: "ultraWin.atlas",
-      animation: "animation",
+      jsonUrl: "captain.json",
+      atlasUrl: "captain.atlas",
+      //animation: "animation",
       alpha: true,
       backgroundColor: "#222222",
       showControls: true,
       premultipliedAlpha: false,
-      controlBones: ["Frame"],
+      //controlBones: ["Frame"],
       success: function (player) {
         console.log("Spine animation loaded!");
       }
